# mmagent

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
backend/: config.py  main.py  requirements.txt
backend/agent/: client.py
backend/api/: routes.py  schemas.py
backend/static/: index.html
backend/static/assets/: index-B9BqoKV8.js
claude_agent_sdk/config/: __init__.py
claude_agent_sdk/tools/: __init__.py  bash_tool.py  browser_tool.py  file_tool.py
deploy/: deploy.sh
docker/: Dockerfile  docker-compose.yml  nginx.conf
engine/: README.md  _set_title.js  claude
engine/claude-code/: package.json
examples/: basic_usage.py  browser_automation.py  mcp_server.py  streaming_chat.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx
