[project]
name = "mmagent"
version = "1.0.0"
description = "MiniMax Agent SDK - Python AI Agent Framework powered by Claude Code"
readme = "README.md"
requires-python = ">=3.12.0"
license = {text = "MIT"}
authors = [
    {name = "MiniMax", email = "contact@minimax.io"}
]
keywords = ["ai", "agent", "claude", "mcp", "automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.11.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "playwright>=1.52.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.16.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
all = [
    "mmagent[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ctz168/mmagent"
Documentation = "https://github.com/ctz168/mmagent/docs"
Repository = "https://github.com/ctz168/mmagent"
Issues = "https://github.com/ctz168/mmagent/issues"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["claude_agent_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/claude_agent_sdk",
    "/examples",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
